--- a/Resources/views/exposeTranslation.js.twig
+++ b/Resources/views/exposeTranslation.js.twig
@@ -1,8 +1,12 @@
-ExposeTranslation.locale = '{{ locale }}';
-ExposeTranslation.defaultDomains = [{% if defaultDomains %}"{{ defaultDomains|join('", "')|raw }}"{% endif %}];
-{% for domain, translations in messages %}
-{% for key, message in translations %}
-ExposeTranslation.add({{ (domain~":"~key)|json_encode|raw }}, {{ message|json_encode|raw }});
-{% endfor %}
-{% endfor %}
+ExposeTranslation.set({
+    placeHolderPrefix:'',
+    placeHolderSuffix:'',
+    locale:'{{ locale }}',
+    defaultDomains:[{% if defaultDomains %}"{{ defaultDomains|join('", "')|raw }}"{% endif %}]
+});
 
+{% for domain, translations in messages %}
+    {% for key, message in translations %}
+       ExposeTranslation.add({{ (domain~":"~key)|json_encode|raw }}, {{ message|json_encode|raw }});
+    {% endfor %}
+{% endfor %}
